--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "latest",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.23.12",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "mongodb": "^6.16.0",
@@ -57,6 +58,7 @@
     "react-day-picker": "latest",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
