--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react-redux": "^7.1.34",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "latest",
